# Vortex

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Main.cpp  Makefile  README.md  cmake_install.cmake  cmakelists.txt
Engine/Client/: cl_main.cpp
Engine/Server/: sv_main.cpp
Engine/Server/Entity/: vbase.cpp
Tools/CMake/: binarySettings.cmake
src/Vortex/Client/: main.cpp
src/Vortex/Server/: main.cpp
